<resources>
    <string name="HOME">HOME</string>
    <string name="Home">home</string>
    <string name="LOCKS">LOCKS</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Secuyou is a strong believer in convenience. Kill-the-key is the Secuyou strategy. Why use a traditional key? It is old-school. Use your smartphone!</string>
    <string name="action_settings">Settings</string>
    <string name="actionbutton">actionButton</string>
    <string name="app_os">App</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appname">Secuyou Reverse</string>
    <string name="appversion">appversion</string>
    <string name="arrow">arrow</string>
    <string name="backgroundpicture">backgroundpicture</string>
    <string name="battery_image">battery_image</string>
    <string name="battery_txt">battery_txt</string>
    <string name="blelogo">blelogo</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_admin">button_admin</string>
    <string name="button_next">next</string>
    <string name="cancel">Cancel</string>
    <string name="channel_description">Notification channel for Secuyou app</string>
    <string name="channel_name">Secuyou Smart Lock</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="connected">connected</string>
    <string name="connecting">connecting</string>
    <string name="connection_image">connected</string>
    <string name="connection_txt">connect</string>
    <string name="delete">DELETE</string>
    <string name="device">device</string>
    <string name="dfu_aborted">Uploading of the application has been canceled.</string>
    <string name="dfu_about_text">The Device Firmware Update (DFU) app allows you to update the firmware of your Bluetooth Smart device over-the-air (OTA). It is compatible with Nordic Semiconductor nRF51822 or nRF51422 devices with S110 SoftDevice and DFU bootloader enabled. With SoftDevice s110 7.0.0+, the SoftDevice itself and/or a bootloader may also be updated. \n\nFor more information about the DFU, see the About DFU section in Settings.</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_action_select_file">SELECT FILE</string>
    <string name="dfu_action_upload">UPLOAD</string>
    <string name="dfu_action_upload_cancel">CANCEL</string>
    <string name="dfu_alert_no_filebrowser_message">File browser application has not been found on your device. Would you like to download one?</string>
    <string name="dfu_alert_no_filebrowser_title">File Browser not found</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_confirmation_dialog_title">Application Uploading</string>
    <string name="dfu_default_name">DEFAULT DFU</string>
    <string name="dfu_example_files_created">Example HEX files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_example_new_files_created">New example HEX files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_feature_title">DFU</string>
    <string name="dfu_feature_title_long">DEVICE FIRMWARE UPDATE</string>
    <string name="dfu_file_info">Please select file to upload. If lock has version 3 or less then upload patch file first.</string>
    <string name="dfu_file_init_message">Do you want to select the Init packet file?\n The Init packet file (*.dat) should contain the device type and revision, application version, list of supported Soft Devices and the firmware CRC in binary format or, with old versions of the DFU bootloader, only the CRC (CRC-CCITT-16). With the new version of the bootloader the extended Init packet is required.</string>
    <string name="dfu_file_init_title">Init packet</string>
    <string name="dfu_file_name_label">File name:</string>
    <string name="dfu_file_scope_label">Scope:</string>
    <string name="dfu_file_scope_title">Select scope</string>
    <string name="dfu_file_size_label">Size:</string>
    <string name="dfu_file_size_text">%d bytes</string>
    <string name="dfu_file_status_error">Reading file failed</string>
    <string name="dfu_file_status_invalid">Invalid file</string>
    <string name="dfu_file_status_invalid_message">Please, select valid HEX file</string>
    <string name="dfu_file_status_label">Status:</string>
    <string name="dfu_file_status_no_file">File not loaded</string>
    <string name="dfu_file_status_ok">OK</string>
    <string name="dfu_file_status_ok_with_init">OK (Init file selected)</string>
    <string name="dfu_file_type_label">Type:</string>
    <string name="dfu_file_type_title">Select file type</string>
    <string name="dfu_help_message">A file browser application must be installed on the device before selecting the file. \n\nThere are number of applications available on Google Play store, e.g. Total Commander or File Manager, that allow you to pick a file from internal memory of the device. To upload a file from the Internet you may use e.g. Drive or Dropbox application. \n\nYou will be asked to select an application if more than one is installed. A single application will be launched automatically. \n\nSince Android KitKat you may use the preinstalled document picker application. Ensure Display advanced devices option is enabled in settings to use the Internal storage. \n\nSample applications were copied to Nordic Semiconductor folder in the internal storage.</string>
    <string name="dfu_help_title">Select file</string>
    <string name="dfu_lib_version">DFU Library version 1.9.0</string>
    <string name="dfu_scripts_created">DFU script files were copied to /sdcard/Nordic Semiconductor.</string>
    <string name="dfu_section_application_header">APPLICATION</string>
    <string name="dfu_section_dfu_header">DEVICE FIRMWARE UPDATE</string>
    <string name="dfu_service_title">nRF Toolbox DFU Proxy</string>
    <string name="dfu_settings_dfu">DFU options</string>
    <string name="dfu_settings_dfu_about">About DFU</string>
    <string name="dfu_settings_dfu_about_summary">DFU documentation on Nordic\'s Developer Zone</string>
    <string name="dfu_settings_dfu_assume_dfu_mode">External MCU DFU</string>
    <string name="dfu_settings_dfu_assume_dfu_mode_info">Check this switch to ON if you want to perform a DFU operation without jumping to the bootloader mode on a device with a DFU implementation from SDK 6.1 or older. To achieve the same result on any newer implementation the DFU Version characteristic should return value other than 0x0100.</string>
    <string name="dfu_settings_dfu_information">Information</string>
    <string name="dfu_settings_dfu_keep_bond">Keep bond information</string>
    <string name="dfu_settings_dfu_mbr_size">MBR size</string>
    <string name="dfu_settings_dfu_mbr_size_title">MBR size (by default 4096 bytes)</string>
    <string name="dfu_settings_dfu_number_of_packets_info">During a DFU operation a lot of data packets are being sent to the target. The onCharacteristicWrite(...) callback in Android API is invoked when the data has been written to the outgoing queue, not when physically sent. Packet receipt notifications were introduced to prevent from overflowing the queue. Depending on the device model, disabling the notifications or setting the value to “high” (&gt; ~300) may make the DFU process freeze at some point on Android versions before Marshmallow.</string>
    <string name="dfu_settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="dfu_settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="dfu_settings_title">DFU Settings</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">Update in progress…</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_uploading_percentage">%d%%</string>
    <string name="go_back">Go Back</string>
    <string name="handle_pos_image">handle_pos_image</string>
    <string name="handle_pos_txt">handle_pos_txt</string>
    <string name="home_lock">Home Lock</string>
    <string name="lock_button">lock_button</string>
    <string name="lock_hardware_version">Lock hardware version</string>
    <string name="lockimage">TODO</string>
    <string name="name">TextView</string>
    <string name="patch">Patch</string>
    <string name="rename">RENAME</string>
    <string name="sensor_hpr">Handle sensor</string>
    <string name="textview">TextView</string>
</resources>