<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tfmoqr="http://schemas.android.com/apk/res-auto" android:theme="@style/Widget.AppCompat.ActionMode" android:screenOrientation="portrait" android:orientation="horizontal" android:background="#2c2828" android:layout_width="match_parent" android:layout_height="80dp" android:layout_marginTop="3dp" android:baselineAligned="false">
    <ImageButton android:id="@+id/lock_button" android:background="#414646" android:padding="10dp" android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/btn_new_lock2" android:scaleType="fitCenter" android:hapticFeedbackEnabled="true" android:contentDescription="@string/lock_button" android:layout_alignParentEnd="true"/>
    <ProgressBar android:id="@+id/progressBar3" android:layout_width="80dp" android:layout_height="80dp" android:layout_alignParentEnd="true" style="?android:attr/progressBarStyle"/>
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="24sp" android:textColor="@android:color/white" android:id="@+id/txtDeviceNameSearch" android:layout_width="200dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/textview" android:layout_marginStart="20dp"/>
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/connect_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:src="@mipmap/sym_connected" android:layout_below="@+id/txtDeviceNameSearch" android:contentDescription="@string/connection_image" android:layout_marginStart="20dp" android:gravity="bottom"/>
    <TextView android:textSize="12sp" android:textColor="@android:color/white" android:id="@+id/connection_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connection_txt" android:layout_below="@+id/txtDeviceNameSearch" android:layout_marginStart="5dp" android:layout_toEndOf="@+id/connect_image"/>
    <ImageView android:id="@+id/battery_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_below="@+id/connect_image" android:contentDescription="@string/battery_image" android:layout_marginStart="20dp" android:layout_toEndOf="@+id/lock_button" android:src="@drawable/battery_full"/>
    <TextView android:textSize="12sp" android:id="@+id/battery_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_txt" android:layout_below="@+id/connection_txt" android:layout_toEndOf="@+id/battery_image"/>
</RelativeLayout>
