<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:screenOrientation="portrait" android:orientation="horizontal" android:id="@+id/relativeLayout" android:background="#2c2828" android:layout_width="match_parent" android:layout_height="80dp" android:layout_marginTop="3dp" android:baselineAligned="false">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="80dp">
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline7" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="40dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline10" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="58dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline6" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="90dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline8" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="110dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline11" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="205dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline12" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="230dp"/>
        <ImageButton android:id="@+id/lock_button" android:background="#414646" android:padding="10dp" android:focusable="auto" android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/locked" android:scaleType="fitCenter" android:hapticFeedbackEnabled="true" android:contentDescription="@string/lock_button" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="24sp" android:textColor="@android:color/white" android:id="@+id/txtDeviceName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/textview" app:layout_constraintStart_toEndOf="@+id/guideline6" app:layout_constraintTop_toTopOf="parent"/>
        <ImageView android:id="@+id/connect_image" android:layout_width="10dp" android:layout_height="10dp" android:layout_marginTop="4dp" android:src="@mipmap/sym_connected" android:contentDescription="@string/connection_image" android:layout_marginStart="4dp" app:layout_constraintStart_toEndOf="@+id/guideline6" app:layout_constraintTop_toTopOf="@+id/guideline7"/>
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:id="@+id/connection_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connection_txt" app:layout_constraintStart_toEndOf="@+id/guideline8" app:layout_constraintTop_toTopOf="@+id/guideline7"/>
        <ImageView android:id="@+id/battery_image" android:layout_width="20dp" android:layout_height="7dp" android:layout_marginTop="4dp" android:contentDescription="@string/battery_image" app:layout_constraintStart_toEndOf="@+id/guideline6" app:layout_constraintTop_toTopOf="@+id/guideline10"/>
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:id="@+id/battery_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_txt" app:layout_constraintStart_toEndOf="@+id/guideline8" app:layout_constraintTop_toTopOf="@+id/guideline10"/>
        <ImageView android:id="@+id/handle_pos_image" android:layout_width="wrap_content" android:layout_height="20dp" android:src="@mipmap/sym_handle_down_greyback" android:contentDescription="@string/handle_pos_image" app:layout_constraintStart_toEndOf="@+id/guideline11" app:layout_constraintTop_toTopOf="@+id/guideline7"/>
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:id="@+id/handle_pos_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/handle_pos_txt" app:layout_constraintBottom_toBottomOf="@+id/guideline10" app:layout_constraintStart_toEndOf="@+id/guideline12"/>
        <ImageButton android:id="@+id/adm_btn" android:layout_width="80dp" android:layout_height="80dp" android:src="@mipmap/sym_arrow_right" android:contentDescription="@string/button_admin" android:backgroundTint="#2c2828" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
