<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:screenOrientation="portrait" android:orientation="vertical" android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline5" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="56dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline13" android:background="#050505" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="365dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline2" android:layout_width="70dp" android:layout_height="243dp" app:layout_constraintGuide_begin="50dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline14" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="395dp"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@android:color/white" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/actionbartitle" android:background="@color/black" android:clickable="true" android:layout_width="match_parent" android:layout_height="56dp" android:text="@string/go_back" android:maxLines="1" android:drawablePadding="0dp" android:drawableStart="@drawable/abc_vector_test" android:paddingStart="@dimen/activity_horizontal_margin" android:paddingEnd="@dimen/activity_horizontal_margin" app:layout_constraintEnd_toEndOf="@+id/guideline2" app:layout_constraintStart_toStartOf="@+id/guideline5" app:layout_constraintTop_toTopOf="@+id/guideline5"/>
        <TextView android:textColor="@color/white" android:id="@+id/info_name" android:layout_width="300dp" android:layout_height="50dp" android:text="@string/dfu_file_info" app:layout_constraintLeft_toLeftOf="@+id/guideline2" app:layout_constraintRight_toLeftOf="@+id/guideline14" app:layout_constraintTop_toBottomOf="@+id/guideline13"/>
        <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="@+id/guideline2" app:layout_constraintTop_toBottomOf="@+id/info_name">
            <RadioButton android:textSize="18sp" android:textColor="#f6f2f2" android:id="@+id/patch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/patch" android:onClick="onRadioButtonClicked" android:buttonTint="#f8f5f5"/>
            <RadioButton android:textSize="18sp" android:textColor="#f3ecec" android:id="@+id/app_os" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_os" android:onClick="onRadioButtonClicked" android:buttonTint="#f6efef"/>
        </RadioGroup>
        <Button android:id="@+id/action_connect" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="144dp" android:text="@string/connection_txt" android:onClick="onConnectClicked" app:layout_constraintTop_toBottomOf="@+id/guideline13"/>
        <Button android:id="@+id/action_upload" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/dfu_action_upload" android:onClick="onUploadClicked" app:layout_constraintTop_toBottomOf="@+id/action_connect"/>
        <ProgressBar android:id="@+id/progressBar2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" app:layout_constraintLeft_toRightOf="@+id/guideline2" app:layout_constraintTop_toBottomOf="@+id/textviewProgress" style="?android:attr/progressBarStyle"/>
        <TextView android:textColor="@color/white" android:id="@+id/textviewProgress" android:layout_width="wrap_content" android:layout_height="19dp" android:layout_marginTop="4dp" android:text="@string/dfu_uploading_percentage" app:layout_constraintLeft_toRightOf="@+id/guideline2" app:layout_constraintTop_toBottomOf="@+id/textviewUploading"/>
        <TextView android:textColor="@color/white" android:id="@+id/textviewUploading" android:layout_width="wrap_content" android:layout_height="19dp" android:layout_marginTop="4dp" android:text="@string/dfu_status_uploading_msg" app:layout_constraintLeft_toRightOf="@+id/guideline2" app:layout_constraintTop_toBottomOf="@+id/device_name"/>
        <TextView android:textColor="@color/white" android:id="@+id/device_name" android:layout_width="wrap_content" android:layout_height="19dp" android:layout_marginTop="20dp" android:text="@string/device" app:layout_constraintLeft_toRightOf="@+id/guideline2" app:layout_constraintTop_toBottomOf="@+id/guideline13"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
