<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:screenOrientation="portrait" android:orientation="horizontal" android:background="@android:color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:layout_gravity="end" android:id="@+id/returnButton" android:background="@android:drawable/ic_menu_close_clear_cancel" android:layout_width="50dp" android:layout_height="50dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline6" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="134dp" app:layout_constraintTop_toBottomOf="@+id/lockname"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline7" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="153dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline9" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="102dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline4" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="165dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline10" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="200dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline3" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="130dp"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="50dp"/>
        <ImageView android:id="@+id/lockimage" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginTop="8dp" android:src="@drawable/locked" android:scaleType="fitCenter" android:contentDescription="@string/lockimage" app:layout_constraintLeft_toLeftOf="@+id/guideline" app:layout_constraintTop_toTopOf="@+id/guideline9"/>
        <TextView android:textSize="24sp" android:textColor="@android:color/white" android:id="@+id/lockname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" android:layout_weight="1" app:layout_constraintLeft_toLeftOf="@+id/guideline3" app:layout_constraintTop_toBottomOf="@+id/guideline9"/>
        <ImageView android:id="@+id/connected" android:layout_width="8dp" android:layout_height="8dp" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:src="@drawable/sym_connected" android:contentDescription="@string/connected" app:layout_constraintLeft_toLeftOf="@+id/guideline3" app:layout_constraintTop_toBottomOf="@+id/guideline6"/>
        <TextView android:textColor="@android:color/white" android:id="@+id/connected_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connection_txt" app:layout_constraintStart_toEndOf="@+id/guideline4" app:layout_constraintTop_toBottomOf="@+id/guideline6"/>
        <ImageView android:id="@+id/battery_image" android:layout_width="20dp" android:layout_height="7dp" android:layout_marginTop="6dp" android:src="@mipmap/sym_batt_full" android:contentDescription="@string/battery_image" android:layout_marginStart="5dp" app:layout_constraintStart_toEndOf="@+id/guideline3" app:layout_constraintTop_toBottomOf="@+id/guideline7"/>
        <TextView android:textColor="@android:color/white" android:id="@+id/battery_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_txt" app:layout_constraintStart_toEndOf="@+id/guideline4" app:layout_constraintTop_toBottomOf="@+id/guideline7"/>
        <TextView android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/txtEdit" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Pincode" android:ems="10" android:inputType="textPersonName" app:layout_constraintBaseline_toBaselineOf="@+id/pincode" app:layout_constraintStart_toStartOf="@+id/guideline"/>
        <TextView android:textSize="24sp" android:textColor="@android:color/white" android:id="@+id/pincode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="Pincode" app:layout_constraintStart_toStartOf="@+id/guideline4" app:layout_constraintTop_toBottomOf="@+id/lockimage"/>
        <TextView android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/homelock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/home_lock" app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/pincode"/>
        <TextView android:textSize="20sp" android:textColor="@android:color/white" android:id="@+id/sensor_hpr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/sensor_hpr" app:layout_constraintStart_toStartOf="@+id/guideline10" app:layout_constraintTop_toBottomOf="@+id/pincode"/>
        <androidx.appcompat.widget.SwitchCompat android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="18sp" android:typeface="normal" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/switch1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/ON" android:textOff="@string/OFF" android:thumb="@drawable/switch_thumb_custom" android:cursorVisible="false" android:textIsSelectable="false" android:switchTextAppearance="@style/TextAppearance.AppCompat.Large" android:track="@drawable/myswitch" android:textAllCaps="true" android:fontFamily="sans-serif-black" android:textAlignment="center" android:layout_marginStart="4dp" android:thumbTint="#dd0f0f" android:showText="true" app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/homelock"/>
        <androidx.appcompat.widget.SwitchCompat android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="18sp" android:typeface="normal" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/switch2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/ON" android:textOff="@string/OFF" android:thumb="@drawable/switch_thumb_custom" android:cursorVisible="false" android:textIsSelectable="false" android:switchTextAppearance="@style/TextAppearance.AppCompat.Large" android:track="@drawable/myswitch" android:textAllCaps="true" android:fontFamily="sans-serif-black" android:textAlignment="center" android:layout_marginStart="4dp" android:thumbTint="#dd0f0f" android:showText="true" app:layout_constraintStart_toStartOf="@+id/guideline10" app:layout_constraintTop_toBottomOf="@+id/sensor_hpr"/>
        <Button android:textSize="24sp" android:textColor="@android:color/white" android:id="@+id/rename" android:background="#3f3c3c" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="40dp" android:text="@string/rename" app:layout_constraintTop_toBottomOf="@+id/homelock"/>
        <Button android:textSize="24sp" android:textColor="@android:color/white" android:id="@+id/delete" android:background="#3f3c3c" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="10dp" android:text="@string/delete" app:layout_constraintTop_toBottomOf="@+id/rename"/>
        <TextView android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/FirmwareText" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="21dp" android:text="Firmware Version" android:ems="10" android:autofillHints="" app:layout_constraintEnd_toStartOf="@+id/guideline4" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/delete"/>
        <TextView android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/LockhardwareText" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lock_hardware_version" android:ems="10" android:inputType="text" android:autofillHints="" app:layout_constraintEnd_toStartOf="@+id/FirmwareText" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintTop_toBottomOf="@+id/FirmwareText"/>
        <TextView android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/firmwareversionString" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" app:layout_constraintBaseline_toBaselineOf="@+id/FirmwareText" app:layout_constraintStart_toEndOf="@+id/FirmwareText"/>
        <TextView android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/lockhardwareversionString" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" app:layout_constraintBaseline_toBaselineOf="@+id/LockhardwareText" app:layout_constraintStart_toEndOf="@+id/LockhardwareText"/>
        <ImageButton android:id="@+id/serviceButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:src="@android:drawable/stat_notify_sdcard_prepare" android:layout_marginStart="4dp" android:backgroundTint="#090808" app:layout_constraintStart_toStartOf="@+id/LockhardwareText" app:layout_constraintTop_toBottomOf="@+id/LockhardwareText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
